# spear

./: .config  .gitignore  AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  README  acinclude.m4  aclocal.m4  config.h.in  configure  configure.ac
Spear.xcodeproj/: project.pbxproj
build-aux/: project_gen.sh  sync.sh
doc/: spear.texi
include/: spear.h
src/c/BerkeleyDB/: Makefile  example.h  simple-bdb-env.c  simple-bdb.c  simple-bdbenv.c
src/c/chroot/: Makefile  chroot.c
src/c/dll/: Makefile  VBExample.vbp  binexample.dsp  binexample.dsw  binexample.opt  binexample.plg  example.cpp  example.def  example.h  exampledll.dsp  exampledll.dsw  exampledll.opt  exampleprogram.dsp  exampleprogram.dsw  exampleprogram.opt  libexample.def  libexample.dsp  libexample.opt  libexample.plg  vbexample.frm
src/c/dll/Debug/: binexample  binexample-c  binexample.pch  libexample.exp  libexample.lib  libexample.pch
src/c/dll/include/: example.h
src/c/dll/lib/: libexample-functions.h  libexample.c  libexample.cpp  libexample.h
src/c/dll/src/: binexample-functions.h  binexample.c  binexample.cpp  binexample.h
src/c/dynamic-memory/: Makefile  growing-buffer.c
src/c/encryption/: Makefile  crypt.c  sha1-base64.c
src/c/files/: stat.c
src/c/getopt/: getopt.c
src/c/ldap/: Makefile  ldapadd.c  ldapblaster.c  ldapblaster.h  ldapconfig.h  ldapsearch.c  ldapurl.c
src/c/ltdl/: Makefile  mod_extended.sym  mod_simple.c  mod_simple.sym  simple-loader.c
src/c/misc/: cryption.c  ctime.c  regex.c  tm_isdst.c
src/c/modules/: Makefile  loader.c  simple-loader.c  simple-module.c
src/c/opengl-guide/: Makefile  example.p6.f1-1.c  syzdek-001.c  syzdek-002.c
src/c/socket/: Makefile  example.h  getpeername.c  libwrap.c  multi-client-echo-server.c  select.c  socket-server.c  unix-socket-client.c  unix-socket-server-poll.c  unix-socket-server.c
src/c/socket2/: socket_functions.c  tcp_client.h  tcp_server.c  tcp_server.h
src/c/sort/: Makefile  mergesort_struct.c
src/c/ssl/: Makefile
src/c/templates/: Makefile  main.c  object.c  object.h
src/garage/c/BerkeleyDB/: simple-bdb.c
src/garage/c/dll/: Makefile  README.txt  VBExample.vbw  binexample.opt  binexample.plg  libexample.dsp  libexample.dsw  libexample.opt  vbexample.frm
src/garage/c/dll/Debug/: binexample  libexample.exp  libexample.lib  libexample.pch
src/garage/c/dll/include/: example.h
src/garage/c/dll/lib/: libexample.h
src/garage/c/dll/src/: binexample.h
src/garage/c/dynamic-memory/: realloc.c
src/garage/c/encryption/: Makefile  sha1.c
src/garage/c/files/: Makefile
src/garage/c/getopt/: Makefile
src/garage/c/id/: Makefile  setuid.c
src/garage/c/ldap/: ldapblaster.c
src/garage/c/ltdl/: Makefile  mod_extended.c
src/garage/c/misc/: bitwise.c  struct_tm.c
src/garage/c/misc/socket/: socket_tcp.c.bak  tcp_client.c
src/garage/c/opengl-guide/: example.p6.f1-1.c  glx.c  glx.cpp
src/garage/c/socket/: Makefile  example.h  getpeername.c  libwrap.c  unix-socket-server-poll.c
src/garage/c/socket2/: socket_functions.h
src/garage/c/ssl/: ssl-http.c
src/garage/c/templates/: Makefile  object.c  object.h
src/garage/c/thread/: Makefile  waitpid.c
src/garage/objc/array/: mutableArray.m
src/garage/objc/calculators/src/: LoanCalculator.h  LoanCalculator.m  TemperatureObject.h  TemperatureObject.m  loan.m
src/garage/objc/cbindings/: Makefile  MyClass.h  cBindings.h  cBindings.m  main.c
src/garage/objc/hello/: HelloWorld.h  HelloWorld.m
src/garage/objc/hello2/: Makefile  simple.m
src/garage/objc/misc/: access.m  nsState.m  shape.m
src/garage/objc/nsstring/: nsstring.m
src/garage/objc/protocol/: FirstClass.m  FirstProtocol.h  Makefile
src/garage/objc/retain/: mutableArray.m
src/garage/sdk/curl/: Makefile
src/garage/sdk/curl/src/: post-callback
src/garage/sdk/libxml2/src/: reader1.c
src/garage/unsorted/blah/: funcptr.c  greaterThan.c  ifor.c  signed.c
src/garage/unsorted/c/: bitordering.c  bitordering1.c  critter.c  cubes.c  dragon.c  elephant.c  endian.c  hello.c  nbo.c  passwd.c  rocket2.c  snow.c
src/garage/unsorted/cpp/: 2oneline.cpp
src/garage/unsorted/perl/: ansi.pl  syslog.pl
src/lang/c/pipe/: .gitignore  Makefile  pipedopen.c
src/lang/csharp/: .gitignore  consoleIO.cs  loops.cs
src/objc/autoreleasePool/: Makefile  autoreleasePool.m
src/objc/calculators/: Makefile
src/objc/calculators/doc/: Doxyfile
src/objc/calculators/src/: LengthObject.h  LengthObject.m  SSCObject.h  SSCObject.m  common.h  length.m  temperature.m
src/objc/cbindings/: MyClass.m
src/objc/hello/: Makefile  hello.m
src/objc/misc/: fraction.m  hello.m
src/objc/nsstring/: Makefile  nsstring2.m  nstring-comapre.m
src/objc/protocol/: FirstClass.h  FirstProtocol.m  SecondClass.h  SecondClass.m  protocolTest.m
src/sdk/curl/: test.txt
src/sdk/curl/src/: data.xml  form.php  post-callback.c  post.php  postit2  postit2.c
src/sdk/libxml2/: Makefile  test.c
src/sdk/libxml2/data/: simple.xml
src/sdk/libxml2/doc/: Doxyfile
src/sdk/libxml2/src/: tree-rim.c
src/sdk/mysql/: .gitignore  Makefile  hello-mysql.c  mysql-query.c  names.sql
src/sdk/openldap/: .gitignore  Makefile  ldapcacert.c  ldapcommon.c  ldapcommon.h  ldapmodify-async.c  ldappeerchain.c  ldapsearch-async.c  ldapsearch-sync.c  ldapsearch.c
src/sdk/openssl/: .gitignore  Makefile  common.c  common.h  peminfo.c  servercainfo.c  servercertinfo.c  serverinfo.c  sha1hash.c
src/sdk/postgresql/: .gitignore  Makefile  hello-postgresql.c  names.sql  postgresql-query.c
src/sdk/sqlite3/: .gitignore  Makefile  hello-sqlite3.c  names.sql  sqlite3-query.c
src/sdk/sqlite3/SQLite3.xcodeproj/: project.pbxproj
src/unsorted/: Makefile
src/unsorted/blah/: bin2str.c  getenv.c  str2bin.c  str2hex.c  strtod-test.m  switch.c
src/unsorted/c/: aquarium.c  cubes2.c  elephant.h  getpass.c  hbo.c  numbers.c  pumpkin.c  pumpkin.h  sizeof.c  status.c  target.c  trailer.c  vtmarquee.c  xmarquee.c  xmas.c
src/unsorted/cpp/: linewrap.cpp
src/unsorted/perl/: crypt.pl  ftpcp.pl  open.pl  passgen.pl  popclear.pl  send.pl  time.pl
(+16 files in other folders)
